--- a/templates/taxi.html
+++ b/templates/taxi.html
@@ -24,7 +24,7 @@
             margin: auto;
         }
         h1 {
-            color: #FFD700; /* Dorado */
+            color: #FFD97F; /* Dorado */
             font-size: 1.8em;
             margin-bottom: 20px;
         }
@@ -40,7 +40,7 @@
             padding: 12px;
             font-size: 16px;
             border-radius: 5px;
-            border: 1px solid #FFD700; /* Dorado */
+            border: 1px solid #FFD97F; /* Dorado */
         }
         input {
             background-color: rgba(255, 255, 255, 0.2); /* Transparente */
@@ -48,11 +48,11 @@
         }
         input:focus {
             outline: none;
-            border-color: #FFBA42; /* Dorado oscuro */
+            border-color: #FFD97F; /* Dorado oscuro */
             box-shadow: 0 0 5px rgba(255, 186, 66, 0.8);
         }
         button {
-            background-color: #FFD700; /* Dorado */
+            background-color: #FFD97F; /* Dorado */
             color: #222222; /* Gris oscuro */
             border: none;
             cursor: pointer;
@@ -61,7 +61,7 @@
             font-weight: bold;
         }
         button:hover {
-            background-color: #FFBA42; /* Dorado oscuro */
+            background-color: #FFD97F; /* Dorado oscuro */
             color: #FFFFFF;
         }
         .back-link {
@@ -69,11 +69,11 @@
         }
         .back-link a {
             text-decoration: none;
-            color: #FFD700; /* Dorado */
+            color: #FFD97F; /* Dorado */
             font-weight: bold;
         }
         .back-link a:hover {
-            color: #FFBA42; /* Dorado oscuro */
+            color: #FFD97F; /* Dorado oscuro */
         }
     </style>
     <script>
