--- a/templates/gracias.html
+++ b/templates/gracias.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #f5f5f5;
+            background-color: #366E73;
             background-image: url('pic.jpg');
             background-size: cover;
             background-position: center;
@@ -19,7 +19,7 @@
         .container {
             margin: 50px auto;
             max-width: 600px;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(54, 110, 115, 0.6);
             border-radius: 10px;
             padding: 20px;
         }
