--- a/static/styles.css
+++ b/static/styles.css
@@ -70,7 +70,7 @@ button {
     transition: background 0.3s, transform 0.2s, box-shadow 0.3s;
     width: 80%; /* Ajusta el ancho para que sean uniformes */
     max-width: 300px;
-    box-shadow: 0px 5px 15px #7D6029; /* Sombra encima del botón */
+    box-shadow: 0px 5px 15px #366E73; /* Sombra encima del botón */
 }
 
 button:hover {
