--- a/static/styles.css
+++ b/static/styles.css
@@ -26,6 +26,20 @@ html, body {
     align-items: center;
 }
 
+/* Fondo para la ventana de agradecimiento */
+.background-gracias {
+    background-color: #366E73; /* Gris oscuro */
+    color: #FFE786; /* Dorado para el texto */
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
 /* Fondo para las demás ventanas */
 .background-ventas {
     background: url('/static/images/fondoventas.png') no-repeat center center;
