--- a/templates/gracias.html
+++ b/templates/gracias.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gracias</title>
     <link rel="stylesheet" href="/static/styles.css">
+    <style>
+        /* Estilo específico para la ventana gracias */
+        .background-gracias {
+            background-color: #366E73; /* Gris oscuro */
+            color: #FFE786; /* Dorado para el texto */
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body class="background-gracias">
     <div>
