--- a/templates/gracias.html
+++ b/templates/gracias.html
@@ -5,26 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gracias</title>
     <link rel="stylesheet" href="/static/styles.css">
-    <style>
-        /* Estilo específico para la ventana gracias */
-        .background-gracias {
-            background-color: #366E73; /* Gris oscuro */
-            color: #FFE786; /* Dorado para el texto */
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            margin: 0;
-            padding: 0;
-        }
-    </style>
 </head>
 <body class="background-gracias">
-    <div>
+    <div class="container">
         <h1>¡Gracias!</h1>
         <p>Tu solicitud ha sido procesada con éxito.</p>
         <a href="/principal"><button>Volver al Menú Principal</button></a>
     </div>
 </body>
+
+<body style="background-color: #366E73; color: #FFE786; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; margin: 0; padding: 0; text-align: center;">
+
 </html>
