--- a/static/styles.css
+++ b/static/styles.css
@@ -84,13 +84,13 @@ button {
     transition: background 0.3s, transform 0.2s, box-shadow 0.3s;
     width: 80%; /* Ajusta el ancho para que sean uniformes */
     max-width: 300px;
-    box-shadow: 0px 5px 15px #7D6029; /* Sombra encima del botón */
+    box-shadow: 0px 5px 15px #366E73; /* Sombra encima del botón */
 }
 
 button:hover {
     background-color: #FFD700; /* Un dorado más fuerte */
     transform: translateY(-2px); /* Eleva el botón al pasar el mouse */
-    box-shadow: 0px 7px 20px #7D6029; /* Sombra más intensa al pasar el mouse */
+    box-shadow: 0px 7px 20px #366E73; /* Sombra más intensa al pasar el mouse */
 }
 
 /* Pie de página */
