--- a/templates/gracias.html
+++ b/templates/gracias.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gracias</title>
-    <link rel="stylesheet" href="/static/styles.css">
 </head>
+    <style>
+        body {
+        background-color: #366E73 !important;
+        color: #FFE786 !important;
+        }
+    </style>
+
+<body style="background-color: #366E73; color: #FFE786; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; margin: 0; padding: 0; text-align: center;">
 <body class="background-gracias">
+<link rel="stylesheet" href="/static/styles.css">
+
     <div class="container">
         <h1>¡Gracias!</h1>
         <p>Tu solicitud ha sido procesada con éxito.</p>
         <a href="/principal"><button>Volver al Menú Principal</button></a>
     </div>
 </body>
-
-<body style="background-color: #366E73; color: #FFE786; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; margin: 0; padding: 0; text-align: center;">
 
 </html>
