--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             background: linear-gradient(to bottom, #4facfe, #00f2fe);
         }
         .container {
-            background: #fff;
+            background: #366E73;
             width: 100%;
             max-width: 400px;
             padding: 20px;
