--- a/templates/success.html
+++ b/templates/success.html
@@ -12,7 +12,7 @@
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            background: #4facfe;
+            background: #366E73;
             color: white;
         }
         .message {
@@ -25,7 +25,7 @@
             font-size: 1.2em;
         }
         a {
-            color: #fff;
+            color: #ffffff;
             text-decoration: underline;
         }
     </style>
